# pocketnative-ai-server

./: app.py  pyproject.toml  requirements.txt
notebooks/: api-playground.ipynb  playground.ipynb
src/: chat.py  chatgpt.py  reader.py  stt.py
