[tool.poetry]
name = "pocketnative-ai-server"
version = "0.1.0"
description = ""
authors = ["Joe Davison <joeddav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.6.0"
Flask = "^3.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
